Don't allow clicks on disabled pinned apps

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -300,6 +300,9 @@ $(function(){
 	});
 
 	$(".sectionMenu").on("click",function() {
+		if ( $(this).hasClass("caMenuDisabled") ) 
+			return;
+		
 		var section = $(this).attr("data-category");
 		switch (section) {
 			case "installed_apps":
