Fix cursor on pinned menu

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -1631,6 +1631,8 @@ function getCategories() {
 		post({action:'areAppsPinned'},function(result) {
 			if (!result.status) {
 				$(".caPinnedMenu").removeClass("caMenuEnabled").addClass("caMenuDisabled");
+			} else {
+				$(".caPinnedMenu").removeClass("caMenuDisabled").addClass("caMenuEnabled");
 			}
 		});
 
